[CHG] More style tweeks for mobile view
Adds set numbers to admin view.
Adds names to all 5 courts on public view.

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -144,7 +144,7 @@ small {
   height: 20px;
   display: inline-block;
   position: relative;
-  top: 5px;
+  top: 33px;
   left: 5px;
   background: url(/images/ball.svg) no-repeat;
 }
@@ -162,6 +162,11 @@ small {
 .change-server {
   position: relative;
   top: 25px;
+}
+
+.serving-icon {
+  width: 5%;
+  float: left;
 }
 
 .note {
