--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -21,6 +21,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 1</span>
+    </div>
     <fieldset>
       <label>{{model.court1Team1Set1}}
         <button {{action 'valueUp' 'court1Team1Set1'}}>+</button>
@@ -37,6 +40,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 2</span>
+    </div>
     <fieldset>
       <label>{{model.court1Team1Set2}}
         <button {{action 'valueUp' 'court1Team1Set2'}}>+</button>
@@ -53,6 +59,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 3</span>
+    </div>
     <fieldset>
       <label>{{model.court1Team1Set3}}
         <button {{action 'valueUp' 'court1Team1Set3'}}>+</button>
@@ -68,12 +77,12 @@
     </fieldset>
   </div>
 
-  <div style="width: 5%; float: left;">
+  <div class="serving-icon">
     <fieldset>
       <span class="{{if model.court1Team1Serving "serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
-    <fieldset>
+    <fieldset style="padding-top: 5px;">
       <span class="{{if model.court1Team1Serving "not-serving" "serving"}}">&nbsp;</span>
     </fieldset>
   </div>
@@ -95,6 +104,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 1</span>
+    </div>
     <fieldset>
       <label>{{model.court2Team1Set1}}
         <button {{action 'valueUp' 'court2Team1Set1'}}>+</button>
@@ -111,6 +123,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 2</span>
+    </div>
     <fieldset>
       <label>{{model.court2Team1Set2}}
         <button {{action 'valueUp' 'court2Team1Set2'}}>+</button>
@@ -127,6 +142,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 3</span>
+    </div>
     <fieldset>
       <label>{{model.court2Team1Set3}}
         <button {{action 'valueUp' 'court2Team1Set3'}}>+</button>
@@ -142,12 +160,12 @@
     </fieldset>
   </div>
 
-  <div style="width: 5%; float: left;">
+  <div class="serving-icon">
     <fieldset>
       <span class="{{if model.court2Team1Serving "serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
-    <fieldset>
+    <fieldset style="padding-top: 5px;">
       <span class="{{if model.court2Team1Serving "not-serving" "serving"}}">&nbsp;</span>
     </fieldset>
   </div>
@@ -169,6 +187,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 1</span>
+    </div>
     <fieldset>
       <label>{{model.court3Team1Set1}}
         <button {{action 'valueUp' 'court3Team1Set1'}}>+</button>
@@ -185,6 +206,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 2</span>
+    </div>
     <fieldset>
       <label>{{model.court3Team1Set2}}
         <button {{action 'valueUp' 'court3Team1Set2'}}>+</button>
@@ -201,6 +225,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 3</span>
+    </div>
     <fieldset>
       <label>{{model.court3Team1Set3}}
         <button {{action 'valueUp' 'court3Team1Set3'}}>+</button>
@@ -216,12 +243,12 @@
     </fieldset>
   </div>
 
-  <div style="width: 5%; float: left;">
+  <div class="serving-icon">
     <fieldset>
       <span class="{{if model.court3Team1Serving "serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
-    <fieldset>
+    <fieldset style="padding-top: 5px;">
       <span class="{{if model.court3Team1Serving "not-serving" "serving"}}">&nbsp;</span>
     </fieldset>
   </div>
@@ -243,6 +270,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 1</span>
+    </div>
     <fieldset>
       <label>{{model.court4Team1Set1}}
         <button {{action 'valueUp' 'court4Team1Set1'}}>+</button>
@@ -259,6 +289,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 2</span>
+    </div>
     <fieldset>
       <label>{{model.court4Team1Set2}}
         <button {{action 'valueUp' 'court4Team1Set2'}}>+</button>
@@ -275,6 +308,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 3</span>
+    </div>
     <fieldset>
       <label>{{model.court4Team1Set3}}
         <button {{action 'valueUp' 'court4Team1Set3'}}>+</button>
@@ -290,12 +326,12 @@
     </fieldset>
   </div>
 
-  <div style="width: 5%; float: left;">
+  <div class="serving-icon">
     <fieldset>
       <span class="{{if model.court4Team1Serving "serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
-    <fieldset>
+    <fieldset style="padding-top: 5px;">
       <span class="{{if model.court4Team1Serving "not-serving" "serving"}}">&nbsp;</span>
     </fieldset>
   </div>
@@ -317,6 +353,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 1</span>
+    </div>
     <fieldset>
       <label>{{model.court5Team1Set1}}
         <button {{action 'valueUp' 'court5Team1Set1'}}>+</button>
@@ -333,6 +372,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 2</span>
+    </div>
     <fieldset>
       <label>{{model.court5Team1Set2}}
         <button {{action 'valueUp' 'court5Team1Set2'}}>+</button>
@@ -349,6 +391,9 @@
   </div>
 
   <div class="update-button-group">
+    <div>
+      <span class="box-score-title">Set 3</span>
+    </div>
     <fieldset>
       <label>{{model.court5Team1Set3}}
         <button {{action 'valueUp' 'court5Team1Set3'}}>+</button>
@@ -364,12 +409,12 @@
     </fieldset>
   </div>
 
-  <div style="width: 5%; float: left;">
+  <div class="serving-icon">
     <fieldset>
       <span class="{{if model.court5Team1Serving "serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
-    <fieldset>
+    <fieldset style="padding-top: 5px;">
       <span class="{{if model.court5Team1Serving "not-serving" "serving"}}">&nbsp;</span>
     </fieldset>
   </div>
