--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -39,12 +39,14 @@
       <span class="box-score-value">{{model.court2Team1Set1}}</span>
       <span class="box-score-value">{{model.court2Team1Set2}}</span>
       <span class="box-score-value">{{model.court2Team1Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court2Team1Name}}</span>
     </div>
     <div style="position: relative;">
       <span class="{{if model.court2Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court2Team2Set1}}</span>
       <span class="box-score-value">{{model.court2Team2Set2}}</span>
       <span class="box-score-value">{{model.court2Team2Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court2Team2Name}}</span>
     </div>
   </div>
 
@@ -60,12 +62,14 @@
       <span class="box-score-value">{{model.court3Team1Set1}}</span>
       <span class="box-score-value">{{model.court3Team1Set2}}</span>
       <span class="box-score-value">{{model.court3Team1Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court3Team1Name}}</span>
     </div>
     <div style="position: relative;">
       <span class="{{if model.court3Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court3Team2Set1}}</span>
       <span class="box-score-value">{{model.court3Team2Set2}}</span>
       <span class="box-score-value">{{model.court3Team2Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court3Team2Name}}</span>
     </div>
   </div>
 
@@ -81,12 +85,14 @@
       <span class="box-score-value">{{model.court4Team1Set1}}</span>
       <span class="box-score-value">{{model.court4Team1Set2}}</span>
       <span class="box-score-value">{{model.court4Team1Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court4Team1Name}}</span>
     </div>
     <div style="position: relative;">
       <span class="{{if model.court4Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court4Team2Set1}}</span>
       <span class="box-score-value">{{model.court4Team2Set2}}</span>
       <span class="box-score-value">{{model.court4Team2Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court4Team2Name}}</span>
     </div>
   </div>
 
@@ -102,12 +108,14 @@
       <span class="box-score-value">{{model.court5Team1Set1}}</span>
       <span class="box-score-value">{{model.court5Team1Set2}}</span>
       <span class="box-score-value">{{model.court5Team1Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court5Team1Name}}</span>
     </div>
     <div style="position: relative;">
       <span class="{{if model.court5Team1Serving "not-serving" "serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court5Team2Set1}}</span>
       <span class="box-score-value">{{model.court5Team2Set2}}</span>
       <span class="box-score-value">{{model.court5Team2Set3}}</span>
+      <span class="box-score-value" class="note">{{model.court5Team2Name}}</span>
     </div>
   </div>
 
