--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -79,11 +79,11 @@
 
   <div class="serving-icon">
     <fieldset>
-      <span class="{{if model.court1Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court1Team1Serving "admin-serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
     <fieldset style="padding-top: 5px;">
-      <span class="{{if model.court1Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court1Team1Serving "not-serving" "admin-serving"}}">&nbsp;</span>
     </fieldset>
   </div>
 
@@ -162,11 +162,11 @@
 
   <div class="serving-icon">
     <fieldset>
-      <span class="{{if model.court2Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court2Team1Serving "admin-serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
     <fieldset style="padding-top: 5px;">
-      <span class="{{if model.court2Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court2Team1Serving "not-serving" "admin-serving"}}">&nbsp;</span>
     </fieldset>
   </div>
 
@@ -245,11 +245,11 @@
 
   <div class="serving-icon">
     <fieldset>
-      <span class="{{if model.court3Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court3Team1Serving "admin-serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
     <fieldset style="padding-top: 5px;">
-      <span class="{{if model.court3Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court3Team1Serving "not-serving" "admin-serving"}}">&nbsp;</span>
     </fieldset>
   </div>
 
@@ -328,11 +328,11 @@
 
   <div class="serving-icon">
     <fieldset>
-      <span class="{{if model.court4Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court4Team1Serving "admin-serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
     <fieldset style="padding-top: 5px;">
-      <span class="{{if model.court4Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court4Team1Serving "not-serving" "admin-serving"}}">&nbsp;</span>
     </fieldset>
   </div>
 
@@ -411,11 +411,11 @@
 
   <div class="serving-icon">
     <fieldset>
-      <span class="{{if model.court5Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court5Team1Serving "admin-serving" "not-serving"}}">&nbsp;</span>
     </fieldset>
 
     <fieldset style="padding-top: 5px;">
-      <span class="{{if model.court5Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court5Team1Serving "not-serving" "admin-serving"}}">&nbsp;</span>
     </fieldset>
   </div>
 
