--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -12,14 +12,14 @@
       <span class="box-score-title">Set 3</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court1Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court1Team1Serving "public-serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court1Team1Set1}}</span>
       <span class="box-score-value">{{model.court1Team1Set2}}</span>
       <span class="box-score-value">{{model.court1Team1Set3}}</span>
       <span class="box-score-value" class="note">{{model.court1Team1Name}}</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court1Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court1Team1Serving "not-serving" "public-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court1Team2Set1}}</span>
       <span class="box-score-value">{{model.court1Team2Set2}}</span>
       <span class="box-score-value">{{model.court1Team2Set3}}</span>
@@ -35,14 +35,14 @@
       <span class="box-score-title">Set 3</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court2Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court2Team1Serving "public-serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court2Team1Set1}}</span>
       <span class="box-score-value">{{model.court2Team1Set2}}</span>
       <span class="box-score-value">{{model.court2Team1Set3}}</span>
       <span class="box-score-value" class="note">{{model.court2Team1Name}}</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court2Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court2Team1Serving "not-serving" "public-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court2Team2Set1}}</span>
       <span class="box-score-value">{{model.court2Team2Set2}}</span>
       <span class="box-score-value">{{model.court2Team2Set3}}</span>
@@ -58,14 +58,14 @@
       <span class="box-score-title">Set 3</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court3Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court3Team1Serving "public-serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court3Team1Set1}}</span>
       <span class="box-score-value">{{model.court3Team1Set2}}</span>
       <span class="box-score-value">{{model.court3Team1Set3}}</span>
       <span class="box-score-value" class="note">{{model.court3Team1Name}}</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court3Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court3Team1Serving "not-serving" "public-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court3Team2Set1}}</span>
       <span class="box-score-value">{{model.court3Team2Set2}}</span>
       <span class="box-score-value">{{model.court3Team2Set3}}</span>
@@ -81,14 +81,14 @@
       <span class="box-score-title">Set 3</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court4Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court4Team1Serving "public-serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court4Team1Set1}}</span>
       <span class="box-score-value">{{model.court4Team1Set2}}</span>
       <span class="box-score-value">{{model.court4Team1Set3}}</span>
       <span class="box-score-value" class="note">{{model.court4Team1Name}}</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court4Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court4Team1Serving "not-serving" "public-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court4Team2Set1}}</span>
       <span class="box-score-value">{{model.court4Team2Set2}}</span>
       <span class="box-score-value">{{model.court4Team2Set3}}</span>
@@ -104,14 +104,14 @@
       <span class="box-score-title">Set 3</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court5Team1Serving "serving" "not-serving"}}">&nbsp;</span>
+      <span class="{{if model.court5Team1Serving "public-serving" "not-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court5Team1Set1}}</span>
       <span class="box-score-value">{{model.court5Team1Set2}}</span>
       <span class="box-score-value">{{model.court5Team1Set3}}</span>
       <span class="box-score-value" class="note">{{model.court5Team1Name}}</span>
     </div>
     <div style="position: relative;">
-      <span class="{{if model.court5Team1Serving "not-serving" "serving"}}">&nbsp;</span>
+      <span class="{{if model.court5Team1Serving "not-serving" "public-serving"}}">&nbsp;</span>
       <span class="box-score-value">{{model.court5Team2Set1}}</span>
       <span class="box-score-value">{{model.court5Team2Set2}}</span>
       <span class="box-score-value">{{model.court5Team2Set3}}</span>
